--- a/src/css/game.css
+++ b/src/css/game.css
@@ -72,8 +72,12 @@ div {
     padding: 0;
     margin: 0;
     text-align: center;
-    color: #fff6;
+    color: #88A2AF;
     border: none;
+}
+
+.ticked {
+    color: #fff;
 }
 
 .guess {
@@ -85,6 +89,11 @@ div {
     font-size: 50px;
     width: 58px;
     height: 58px;
+    color: white;
+}
+
+.clue {
+    color: black;
 }
 
 .selected_square {
