--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,12 +10,52 @@ div {
 }
 
 #game_area {
-    display: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
     text-align: center;
     width: 100%;
     padding-top: 20px;
     padding-bottom: 20px;
     background-color: #9FB1BC;
+}
+
+#side_panel {
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    border: solid white 4px;
+    margin-left: 40px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+#difficulty_panel_header {
+    font-size: 16px;
+    padding: 4px;
+    background-color: #2F3D56;
+    color: #88A2AF;
+}
+
+#difficulty_panel_value {
+    font-size: 24px;
+    padding: 4px;
+    color: #2F3D56;
+}
+
+#timer_panel_header {
+    font-size: 16px;
+    padding: 4px;
+    border-top: solid white 4px;
+    background-color: #2F3D56;
+    color: #88A2AF;
+}
+
+#timer_panel_value {
+    font-size: 24px;
+    padding: 4px;
+    color: #2F3D56;
 }
 
 #new_game_panel {
@@ -26,6 +66,7 @@ div {
     background-color: #9FB1BC;
     font-family: 'Open Sans', sans-serif;
 }
+
 
 #new_game_panel h1 {
     font-weight: bold;
