--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,6 +6,18 @@ body {
     background-color: #2F3D56;
 }
 
+#blink_screen {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(255,0,0); /* Fallback color */
+}
+
 div {
     padding: 0px 0px;
     margin: 0;
